# NapCatQQAutoReply

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/napcat/: compose.yml
docs/superpowers/plans/: 2026-06-24-message-search-plan.md
docs/superpowers/specs/: 2026-06-24-message-search-design.md
scripts/: napcat.sh  render_napcat_config.py
src/napcat_qq_auto_reply/: __init__.py  app.py  config.py  embeddings.py  main.py  napcat_config.py
src/napcat_qq_auto_reply/agent/: __init__.py  chat.py  deepseek.py  prompts.py  runtime.py
src/napcat_qq_auto_reply/bot/: __init__.py  commands.py  context.py  dispatcher.py  pet.py  routing.py
src/napcat_qq_auto_reply/database/: memory.py  neo4j_style.py
src/napcat_qq_auto_reply/onebot/: __init__.py  client.py  models.py  parser.py  path_mapping.py
src/napcat_qq_auto_reply/tools/: attachments.py  external.py  image_generation.py  message_search.py  openai_images.py
tests/: test_app_helpers.py  test_chat_agent.py  test_config_and_agent.py  test_context_and_commands.py  test_databases.py  test_dispatcher.py  test_docker_deployment.py  test_external_tools.py  test_image_tools.py  test_isolation.py  test_message_parser.py  test_message_search.py  test_napcat_config.py  test_onebot_client.py  test_routing.py
