[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napcat-qq-auto-reply"
version = "0.1.0"
description = "A standalone NapCat/OneBot QQ group auto-reply bot."
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "ddgs",
    "langchain-community",
    "langchain-core",
    "langchain-mcp-adapters",
    "langchain-openai",
    "langgraph",
    "langgraph-checkpoint-postgres",
    "neo4j",
    "openai",
    "pillow",
    "psycopg[binary,pool]",
    "python-dotenv",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = ["pytest>=9", "pytest-asyncio", "ruff"]

[project.scripts]
napcat-qq-bot = "napcat_qq_auto_reply.main:run"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
